--- a/exposed-panels/oracle-containers-panel.yaml
+++ b/exposed-panels/oracle-containers-panel.yaml
@@ -17,6 +17,7 @@ requests:
         words:
           - "Welcome to Oracle Containers for J2EE 10g"
           - "Administration Guide is included"
+        condition: or
 
       - type: status
         status:
