--- a/exposed-panels/oracle-enterprise-manager-login.yaml
+++ b/exposed-panels/oracle-enterprise-manager-login.yaml
@@ -18,9 +18,7 @@ requests:
           - "Oracle UIX"
           - "libNPSVG3.so"
           - "Oracle Enterprise Manager"
-          - "_submitOnEnter"
-          - "userPassword"
-          - "sysdba"
+        condition: or
 
       - type: status
         status:
