--- a/vulnerabilities/other/firewall-password-leak.yaml
+++ b/vulnerabilities/other/firewall-password-leak.yaml
@@ -21,5 +21,5 @@ requests:
         words:
           - "var dkey_verify = Get_Verify_Info(hex_md5"
           - "get_dkey_passwd"
-          - ""\"name\":\"\\w+\",\"password\":\"\\w{15,33}\",\"lastpwdtime"
+          - "\"name\":\"\\w+\",\"password\":\"\\w{15,33}\",\"lastpwdtime"
         part: body
