Update and rename firewall-password-leak.yaml to ruijie-password-leak.yaml

--- a/vulnerabilities/other/ruijie-password-leak.yaml
+++ b/vulnerabilities/other/ruijie-password-leak.yaml
@@ -1,25 +1,37 @@
-id: firewall-password-leak
+id: ruijie-password-leak
 
 info:
-  name: Firewalls Password Leak
+  name: RG-UAC Ruijie Password Leak
   author: ritikchaddha
   severity: high
   description: Security Notice of Information Disclosure Vulnerability in Multiple Firewall Devices
   reference:
     - https://forum.butian.net/share/177
-  tags: password,leak,firewall
+  metadata:
+    shodan-query: http.html:"Get_Verify_Info"
+  tags: password,leak,ruijie,exposure,firewall,router
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
 
     matchers-condition: and
     matchers:
-
       - type: word
+        part: body
         words:
           - "var dkey_verify = Get_Verify_Info(hex_md5"
           - "get_dkey_passwd"
-          - "\"name\":\"\\w+\",\"password\":\"\\w{15,33}\",\"lastpwdtime"
+        condition: and
+
+      - type: status
+        status:
+          - 200
+
+    extractors:
+      - type: regex
         part: body
+        group: 1
+        regex:
+          - 'user_passwd\/\*"([a-z0-9]+)"\*\/\);'
