Update and rename vulnerabilities/other/ruijie-password-leak.yaml to vulnerabilities/other/ruijie/ruijie-password-leak.yaml

--- a/vulnerabilities/other/ruijie/ruijie-password-leak.yaml
+++ b/vulnerabilities/other/ruijie/ruijie-password-leak.yaml
@@ -18,12 +18,9 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: word
-        part: body
-        words:
-          - "var dkey_verify = Get_Verify_Info(hex_md5"
-          - "get_dkey_passwd"
-        condition: and
+      - type: regex
+        regex:
+          - 'user_passwd\/\*"([a-z0-9]+)"\*\/\);'
 
       - type: status
         status:
