--- a/exposed-panels/ruijie/rg-uac-panel.yaml
+++ b/exposed-panels/ruijie/rg-uac-panel.yaml
@@ -15,11 +15,10 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: word
         part: body
         words:
-          - "Ruijie Internet access management and audit system"
+          - "dkey_check.php"
           - "get_dkey_passwd"
         condition: and
 
