--- a/fuzzing/valid-gmail-check.yaml
+++ b/fuzzing/valid-gmail-check.yaml
@@ -1,9 +1,11 @@
-id: valid-gmail-check
+id: valid-gmail-checker
 
 info:
-  name: Valid Google Mail Check
-  author: dievus, dwisiswant0
+  name: Valid Google Mail Checker
+  author: dievus,dwisiswant0
   severity: info
+  reference:
+    - https://github.com/dievus/geeMailUserFinder
 
 self-contained: true
 requests:
@@ -13,6 +15,6 @@ requests:
 
     matchers:
       - type: word
+        part: header
         words:
           - "COMPASS"
-        part: header
