--- a/technologies/nginx/nginx-version.yaml
+++ b/technologies/nginx/nginx-version.yaml
@@ -17,7 +17,7 @@ requests:
       - type: regex
         part: header
         regex:
-          - "nginx\\[0-9.]+"
+          - 'nginx/[0-9.]+'
 
       - type: status
         status:
@@ -26,6 +26,5 @@ requests:
     extractors:
       - type: regex
         part: header
-        group: 1
         regex:
-          - "nginx\\([0-9.]+)"
+          - 'nginx/[0-9.]+'
