--- a/default-logins/others/telecom-gateway-default-login.yaml
+++ b/default-logins/others/telecom-gateway-default-login.yaml
@@ -1,4 +1,4 @@
-id: telecom-gateway-default-password
+id: telecom-gateway-default-login
 
 info:
   name: Telecom Gateway Default Login
@@ -9,26 +9,28 @@ info:
 requests:
   - raw:
       - |
-        GET /manager/index.php HTTP/1.1
-        Host: {{Hostname}}
-
-      - |
         POST /manager/login.php HTTP/1.1
         Host: {{Hostname}}
 
-        Name=admin&Pass=admin
+        Name={{username}}&Pass={{password}}
 
+    attack: pitchfork
+    payloads:
+      username:
+        - admin
+      password:
+        - admin
     redirects: true
     max-redirects: 2
     matchers-condition: and
     matchers:
-
       - type: word
+        part: body
         words:
           - "<title>电信网关服务器管理后台</title>"
           - "index-shang.php"
           - "di.php"
-        part: body
+        condition: and
 
       - type: status
         status:
