--- a/misconfiguration/google/insecure-firebase-database.yaml
+++ b/misconfiguration/google/insecure-firebase-database.yaml
@@ -7,6 +7,8 @@ info:
   description: If the owner of the app have set the security rules as true for both "read" & "write" an attacker can probably dump database and write his own data to firebase database.
   reference:
     - https://blog.securitybreached.org/2020/02/04/exploiting-insecure-firebase-database-bugbounty
+  metadata:
+    verified-by: dhiyaneshdk
   tags: firebase,google,misconfig
 
 requests:
