--- a/default-logins/panabit/panabit-default-login.yaml
+++ b/default-logins/panabit/panabit-default-login.yaml
@@ -13,6 +13,8 @@ info:
     cvss-metrics: CVSS:3.0/AV:N/AC:L/PR:N/UI:N/S:C/C:L/I:N/A:N
     cvss-score: 5.8
     cwe-id: CWE-522
+  metadata:
+    fofa-query: app="Panabit-智能网关"
   tags: panabit,default-login
 
 requests:
@@ -51,12 +53,12 @@ requests:
           - 'urn:schemas-microsoft-com:vml'
         part: body
         condition: and
-        
+
       - type: word
         part: header
         words:
           - "paonline_admin"
-        condition: and        
+        condition: and
 
       - type: status
         status:
