--- a/vulnerabilities/other/huijietong-cloud-fileread.yaml
+++ b/vulnerabilities/other/huijietong-cloud-fileread.yaml
@@ -21,12 +21,11 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: regex
         part: body
         regex:
           - "root:.*:0:0:"
-          - "for 16-bit app support"
+          - "\\[(font|extension|file)s\\]"
         condition: or
 
       - type: status
