meta data update

--- a/misconfiguration/google/insecure-firebase-database.yaml
+++ b/misconfiguration/google/insecure-firebase-database.yaml
@@ -8,7 +8,7 @@ info:
   reference:
     - https://blog.securitybreached.org/2020/02/04/exploiting-insecure-firebase-database-bugbounty
   metadata:
-    verified-by: dhiyaneshdk
+    verified: true
   tags: firebase,google,misconfig
 
 requests:
