Enhancement: cnvd/2019/CNVD-2019-19299.yaml by cs

--- a/cnvd/2019/CNVD-2019-19299.yaml
+++ b/cnvd/2019/CNVD-2019-19299.yaml
@@ -1,5 +1,5 @@
 id: CNVD-2019-19299
-
+# Just a test
 info:
   name: Zhiyuan A8 Arbitrary File Write (RCE)
   author: daffainfo
@@ -45,3 +45,5 @@ requests:
           - 'contains(body_1, "htmoffice operate")'
           - 'contains(body_2, "Windows IP")'
         condition: and
+
+# Enhanced by cs on 2022/05/09
