--- a/technologies/cloudflare-nginx-detect.yaml
+++ b/technologies/cloudflare-nginx-detect.yaml
@@ -4,11 +4,12 @@ info:
   name: Cloudflare Nginx Detect
   author: idealphase
   severity: info
-  metadata:
-    shodan-query: product:"cloudflare-nginx"
   reference:
     - https://blog.cloudflare.com/end-of-the-road-for-cloudflare-nginx/
-  tags: cloudflare,nginx
+  metadata:
+    verified: true
+    shodan-query: product:"cloudflare-nginx"
+  tags: cloudflare,nginx,tech
 
 requests:
   - method: GET
