--- a/exposures/configs/msmtp-config.yaml
+++ b/exposures/configs/msmtp-config.yaml
@@ -28,3 +28,10 @@ requests:
       - type: status
         status:
           - 200
+
+      - type: word
+        part: header
+        words:
+          - 'text/plain'
+          - 'octet-stream'
+        condition: or
