--- a/exposed-panels/umbraco-login.yaml
+++ b/exposed-panels/umbraco-login.yaml
@@ -1,12 +1,15 @@
 id: umbraco-login
 
 info:
-  name: Umbraco Login Screen
+  name: Umbraco Login Panel
   author: ola456
   severity: info
   description: An Umbraco backoffice login screen was detected.
   reference:
     - https://our.umbraco.com/documentation/Fundamentals/Backoffice/Login/
+  metadata:
+    verified: true
+    shodan-query: http.title:"Umbraco"
   tags: panel,umbraco
 
 requests:
