--- a/exposures/configs/msmtp-config.yaml
+++ b/exposures/configs/msmtp-config.yaml
@@ -7,6 +7,8 @@ info:
   description: msmtp is a very simple and easy to use SMTP client with fairly complete sendmail compatibility.
   reference:
     - https://wiki.archlinux.org/title/Msmtp
+  metadata:
+    verified: true
   tags: exposure,generic,msmtp
 
 requests:
