Update and rename default-logins/others/h3c-secparh-default-login.yaml to misconfiguration/unauthorized-h3csecparh-login.yaml

--- a/misconfiguration/unauthorized-h3csecparh-login.yaml
+++ b/misconfiguration/unauthorized-h3csecparh-login.yaml
@@ -1,14 +1,14 @@
-id: h3c-secparh-default-login
+id: unauthorized-h3csecparh-login
 
 info:
-  name: H3C Secparh Default Login
+  name: Unauthorized H3C Secparh Login
   author: ritikchaddha
   severity: high
   metadata:
     verified: true
     shodan-query: http.html:"H3C-SecPath-运维审计系统"
     fofa-query: app="H3C-SecPath-运维审计系统" && body="2018"
-  tags: h3c,default-login
+  tags: h3c,default-login,unauth
 
 requests:
   - method: GET
@@ -17,13 +17,13 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: word
         part: body
         words:
           - "admin"
           - "审计管理员"
           - "错误的id"
+        condition: and
 
       - type: status
         status:
