--- a/vulnerabilities/other/ecsimagingpacs-rce.yaml
+++ b/vulnerabilities/other/ecsimagingpacs-rce.yaml
@@ -6,6 +6,8 @@ info:
   severity: critical
   description: ECSIMAGING PACS Application in 6.21.5 and bellow suffers from a OS Injection vulnerability. The parameter `file` on the webpage /showfile.php can be exploited with simple OS injection to gain root access. www-data user has sudo NOPASSWD access
   reference: https://www.exploit-db.com/exploits/49388
+  metadata:
+    verified: false
   tags: ecsimagingpacs,rce
 
 requests:
@@ -15,7 +17,6 @@ requests:
 
     matchers-condition: and
     matchers:
-
       - type: regex
         regex:
           - "root:.*:0:0:"
