Cleanup and spacing

--- a/vulnerabilities/other/ecsimagingpacs-rce.yaml
+++ b/vulnerabilities/other/ecsimagingpacs-rce.yaml
@@ -1,14 +1,16 @@
 id: ecsimagingpacs-rce
 
 info:
-  name: ECSIMAGING PACS 6.21.5 - Remote code execution
+  name: ECSIMAGING PACS <= 6.21.5 - Command Execution and Local File Inclusion
   author: ritikchaddha
   severity: critical
-  description: ECSIMAGING PACS Application in 6.21.5 and bellow suffers from a OS Injection vulnerability. The parameter `file` on the webpage /showfile.php can be exploited with simple OS injection to gain root access. www-data user has sudo NOPASSWD access
+  description: ECSIMAGING PACS Application 6.21.5 and below suffer from a command injection vulnerability and a local file include vulnerability. The 'file' parameter on the page /showfile.php can be exploited to perform command execution or local file inclusion. Often on ECSIMAGING PACS, the www-data user has sudo NOPASSWD access.
   reference: https://www.exploit-db.com/exploits/49388
   metadata:
     verified: false
   tags: ecsimagingpacs,rce
+  classification:
+    cwe-id: CWE-78
 
 requests:
   - method: GET
@@ -24,3 +26,5 @@ requests:
       - type: status
         status:
           - 200
+
+# Enhanced by cs 05/12/2022
