Many title clean-ups for more standardization. Some vendor name clean-up

--- a/cnvd/2020/CNVD-2020-62422.yaml
+++ b/cnvd/2020/CNVD-2020-62422.yaml
@@ -1,7 +1,7 @@
 id: CNVD-2020-62422
 
 info:
-  name: Seeyon readfile(CNVD-2020-62422)
+  name: Seeyon - Arbitrary File Retrieval
   author: pikpikcu
   severity: medium
   reference:
