--- a/exposed-panels/zyxel/zyxel-vmg1312b10d-login.yaml
+++ b/exposed-panels/zyxel/zyxel-vmg1312b10d-login.yaml
@@ -1,7 +1,7 @@
 id: zyxel-vmg1312b10d-login
 
 info:
-  name: ZYXEL VMG1312-B10D Login Detect
+  name: Zyxel VMG1312-B10D - Login Detection
   author: princechaddha
   severity: info
   metadata:
