--- a/misconfiguration/d-link-arbitary-fileread.yaml
+++ b/misconfiguration/d-link-arbitary-fileread.yaml
@@ -1,7 +1,7 @@
 id: dlink-file-read
 
 info:
-  name: D-Link Arbitrary File Read
+  name: D-Link - Arbitrary File Retrieval
   author: dhiyaneshDK
   severity: high
   reference:
