--- a/vulnerabilities/moodle/moodle-filter-jmol-xss.yaml
+++ b/vulnerabilities/moodle/moodle-filter-jmol-xss.yaml
@@ -1,7 +1,7 @@
 id: moodle-filter-jmol-xss
 
 info:
-  name: Moodle filter_jmol - XSS
+  name: Moodle filter_jmol - Cross-Site Scripting
   author: madrobot
   severity: medium
   description: Cross-site scripting on Moodle.
