--- a/vulnerabilities/moodle/moodle-xss.yaml
+++ b/vulnerabilities/moodle/moodle-xss.yaml
@@ -1,7 +1,7 @@
 id: moodle-xss
 
 info:
-  name: Moodle redirect_uri Reflected XSS
+  name: Moodle redirect_uri - Cross-Site Scripting
   author: hackergautam
   severity: medium
   description: XSS in moodle via redirect_uri parameter
