--- a/vulnerabilities/oracle/oracle-ebs-xss.yaml
+++ b/vulnerabilities/oracle/oracle-ebs-xss.yaml
@@ -1,7 +1,7 @@
 id: oracle-ebs-xss
 
 info:
-  name: Oracle EBS XSS
+  name: Oracle EBS - Cross-Site Scripting
   author: dhiyaneshDk
   severity: medium
   reference:
