--- a/vulnerabilities/other/kafdrop-xss.yaml
+++ b/vulnerabilities/other/kafdrop-xss.yaml
@@ -1,10 +1,10 @@
 id: kafdrop-xss
 
 info:
-  name: KafDrop XSS
+  name: KafDrop - Cross-Site Scripting
   author: dhiyaneshDk
   severity: medium
-  description: A vulnerability in KafDrop allows remote unauthenticated attackers to inject arbitrary HTML and/or Javascript into the response returned by the server.
+  description: A vulnerability in KafDrop allows remote unauthenticated attackers to inject arbitrary HTML and/or JavaScript into the response returned by the server.
   reference:
     - https://github.com/HomeAdvisor/Kafdrop/issues/12
   tags: kafdrop,xss
