--- a/vulnerabilities/wordpress/wordpress-wordfence-waf-bypass-xss.yaml
+++ b/vulnerabilities/wordpress/wordpress-wordfence-waf-bypass-xss.yaml
@@ -1,7 +1,7 @@
 id: wordpress-wordfence-waf-bypass-xss
 
 info:
-  name: Wordfence WAF Bypass WordPress XSS
+  name: Wordpress Wordfence WAF - Cross-Site Scripting
   author: hackergautam
   severity: medium
   reference:
