--- a/vulnerabilities/wordpress/wordpress-zebra-form-xss.yaml
+++ b/vulnerabilities/wordpress/wordpress-zebra-form-xss.yaml
@@ -1,7 +1,7 @@
 id: wordpress-zebra-form-xss
 
 info:
-  name: Wordpress Zebra Form XSS
+  name: Wordpress Zebra Form - Cross-Site Scripting 
   author: madrobot
   severity: medium
   reference:
