--- a/exposed-panels/zyxel/zyxel-vsg1432b101-login.yaml
+++ b/exposed-panels/zyxel/zyxel-vsg1432b101-login.yaml
@@ -1,7 +1,7 @@
 id: zyxel-vsg1432b101-login
 
 info:
-  name: ZYXEL VSG1432-B101 Login Detect
+  name: Zyxel VSG1432-B101 - Login Detection
   author: princechaddha
   severity: info
   metadata:
