--- a/vulnerabilities/other/nuuo-file-inclusion.yaml
+++ b/vulnerabilities/other/nuuo-file-inclusion.yaml
@@ -1,7 +1,7 @@
 id: nuuo-file-inclusion
 
 info:
-  name: NUUO NVRmini 2 3.0.8 Local File Disclosure
+  name: NUUO NVRmini 2 v3.0.8 - Atrbitary File Retrieval
   author: princechaddha
   severity: high
   reference:
