--- a/vulnerabilities/other/odoo-cms-redirect.yaml
+++ b/vulnerabilities/other/odoo-cms-redirect.yaml
@@ -1,12 +1,13 @@
 id: odoo-cms-redirect
 
 info:
-  name: Odoo CMS - Open redirection all Version
+  name: Odoo CMS - Open Redirect
   author: 0x_Akoko
   severity: low
-  description: Odoo CMS - Open redirection all Version.
+  description: Odoo CMS - Open redirection in all versions due to Odoo's policy.
   reference:
     - https://cxsecurity.com/issue/WLB-2021020143
+    - https://www.odoo.com/page/security-nonvuln-redirectors
   tags: odoo,redirect
 
 requests:
