--- a/vulnerabilities/other/pmb-directory-traversal.yaml
+++ b/vulnerabilities/other/pmb-directory-traversal.yaml
@@ -1,10 +1,10 @@
 id: pmb-directory-traversal
 
 info:
-  name: PMB 5.6 Directory Traversal
+  name: PMB 5.6 - Arbitrary File Retrieval
   author: geeknik
   severity: medium
-  description: The PMB Gif Image is not sanitizing the content of the 'chemin' parameter, this can in turn be used to a Local File Disclosure.
+  description: The PMB Gif Image is not sanitizing the content of the 'chemin' parameter, wchi can be used for local file retrieval.
   reference:
     - https://packetstormsecurity.com/files/160072/PMB-5.6-Local-File-Disclosure-Directory-Traversal.html
   tags: lfi
