--- a/vulnerabilities/other/pmb-local-file-disclosure.yaml
+++ b/vulnerabilities/other/pmb-local-file-disclosure.yaml
@@ -1,7 +1,7 @@
 id: pmb-local-file-disclosure
 
 info:
-  name: PMB 5.6 - 'chemin' Local File Disclosure
+  name: PMB 5.6 - getgif.php Arbitrary File Retrieval
   author: dhiyaneshDk
   severity: high
   reference:
