--- a/vulnerabilities/other/wems-manager-xss.yaml
+++ b/vulnerabilities/other/wems-manager-xss.yaml
@@ -1,7 +1,7 @@
 id: wems-manager-xss
 
 info:
-  name: WEMS Enterprise Manager XSS
+  name: WEMS Enterprise Manager - Cross-Site Scripting
   author: pikpikcu
   severity: medium
   description: A vulnerability in WEMS Enterprise Manager allows remote attackers to inject arbitrary Javascript into the response return by the server by sending it to the '/guest/users/forgotten' endpoint and the
