--- a/vulnerabilities/other/microstrategy-ssrf.yaml
+++ b/vulnerabilities/other/microstrategy-ssrf.yaml
@@ -1,7 +1,7 @@
 id: microstrategy-ssrf
 
 info:
-  name: MicroStrategy tinyurl - Server-Side Reqeust Forgery (Blind)
+  name: MicroStrategy tinyurl - Server-Side Request Forgery (Blind)
   author: organiccrap
   severity: high
   description: Blind server-side (SSRF) request forgery vulnerability on MicroStrategy URL shortener.
