minor matcher update

--- a/vulnerabilities/wordpress/seo-redirection-xss.yaml
+++ b/vulnerabilities/wordpress/seo-redirection-xss.yaml
@@ -1,7 +1,7 @@
 id: seo-redirection-xss
 
 info:
-  name: SEO Redirection < 7.4 - Reflected Cross-Site Scripting
+  name: WordPress SEO Redirection < 7.4 - Reflected Cross-Site Scripting
   author: DhiyaneshDK
   severity: medium
   description: |
@@ -42,6 +42,7 @@ requests:
         words:
           - "</script><svg/onload=alert(/XSS/)>"
           - "settings_page_seo-redirection"
+        condition: and
 
       - type: word
         part: header
